yiltc-v0.2-backup/testsuite/negative/ternary.yilt
// Negative: ternary conditional expression `?:` is not supported.
fn main()
    let x = 5
    let label = x > 3 ? "big" : "small"
    print(label)
